--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,24 @@
-body{
+html,body{
     /* background-color: #76a346; */
-    background-color: #a7bcff;
+    margin:0 ;
+    padding: 0;
+    /* background-color: #a7bcff; */
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.container{
+*{
+    box-sizing: border-box;
+}
+
+.form-container{
+    background-color: #a7bcff;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.wrapper{
+.form-wrapper{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -22,7 +29,7 @@ body{
     /* height: 80vh; */
 }
 
-.logo{
+.form-wrapper .logo{
     /* color: #76a346; */
     color: #5d5b8d;
     font-weight: bold;
@@ -43,7 +50,7 @@ form{
     /* align-items: center; */
     justify-content: center;
 }
-input{
+form input{
     padding: 15px;
     font-size: 16px;
     /* border-radius: 5px; */
@@ -55,7 +62,7 @@ input{
     }
 }
 
-input.avatar{
+form input.avatar{
     display: none;
 }
 
@@ -71,7 +78,7 @@ label img{
     width: 32px;
 }
 
-button{
+form button{
     padding: 10px;
     border: none;
     /* border-radius: 10px; */
@@ -88,4 +95,83 @@ form+p{
     margin-top: 10px;
     margin-bottom: auto;
     font-size: small;
+}
+
+.home{
+    height: 100vh;
+    background-color: #a7bcff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container{
+    border: 1px white solid;
+    border-radius: 10px;
+    width: 65%;
+    height: 80%;
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+}
+
+.sidebar{
+    flex: 1;
+    background-color: #3e3c61;
+/* border-radius: 10px 0px 0px 10px; */
+    border-right: none;
+}
+
+.navbar{
+    height: 50px;
+    background-color: #2f2d52;
+    color: #ddddf7;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.navbar .logo{
+    font-weight: bold;
+}
+
+.profile{
+    display: flex;
+    /* align-items: center; */
+    /* justify-content: center; */
+    gap: 10px;
+}
+
+.profile img{
+    background-color: #ddddf7;
+    height: 24px;
+    width: 24px;
+    border-radius: 50%;;
+    object-fit: cover;
+}
+
+.profile button{
+    background-color: #5d5b8d;
+    border: none;
+    color: #ddddf7;
+    font-size: 10px;
+    /* border-radius: 10px; */
+    cursor: pointer;
+}
+
+.search input{
+    width: 100%;
+    background-color: inherit;
+    border: none;
+    padding: 10px;
+    color: white;
+    border-bottom: 1px #5d5b8d solid;
+    &::placeholder{
+        color: #ddddf7;
+    }
+}
+
+.chats{
+    flex:2
 }
