--- a/src/style.css
+++ b/src/style.css
@@ -26,6 +26,7 @@ html,body{
     background-color: white;
     border-radius: 10px;
     padding: 20px 60px;
+    gap: 10px;  /* may be faulty */
     /* height: 80vh; */
 }
 
@@ -37,18 +38,18 @@ html,body{
     /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
 }
 
-.logo+p{
-    font-size: 20px;
+.title{
+    font-size: 12px;
+    color: #5d5b8d;
     /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
-    font-weight: 500;
+    /* font-weight: 500; */
 }
 
 form{
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 15px;
     /* align-items: center; */
-    justify-content: center;
 }
 form input{
     padding: 15px;
@@ -126,7 +127,7 @@ form+p{
     height: 50px;
     background-color: #2f2d52;
     color: #ddddf7;
-    padding: 10px;
+    padding:  0px 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -160,16 +161,44 @@ form+p{
     cursor: pointer;
 }
 
+.search{
+    color: white;
+    border-bottom: 1px gray solid;
+}
+.searchForm{
+    padding: 10px;
+}
 .search input{
     width: 100%;
-    background-color: inherit;
+    background-color: transparent;
+    outline: none;
     border: none;
     padding: 10px;
     color: white;
-    border-bottom: 1px #5d5b8d solid;
     &::placeholder{
-        color: #ddddf7;
+        color: lightgray;
     }
+}
+
+.userchat{
+    /* width: 40px; */
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 10px;
+    font-size: 20px;
+    /* color:white;   already in .search*/
+    cursor: pointer;
+    &:hover{
+        background-color: #2f2d52;
+    }
+}
+
+.userchat img{
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
 .chats{
