--- a/src/style.css
+++ b/src/style.css
@@ -1,239 +1,378 @@
-html,body{
-    /* background-color: #76a346; */
-    margin:0 ;
-    padding: 0;
-    /* background-color: #a7bcff; */
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+html,
+body {
+  /* background-color: #76a346; */
+  margin: 0;
+  padding: 0;
+  /* background-color: #a7bcff; */
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-*{
+/* *{
     box-sizing: border-box;
+} */
+
+.warning {
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  text-align: center;
+  background-color: red;
+  padding: 10px;
+  color: white;
+  margin-bottom: 0px;
 }
 
-.form-container{
-    background-color: #a7bcff;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.form-container {
+  background-color: #a7bcff;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.form-wrapper{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: white;
-    border-radius: 10px;
-    padding: 20px 60px;
-    gap: 10px;  /* may be faulty */
-    /* height: 80vh; */
+.form-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  border-radius: 10px;
+  padding: 20px 60px;
+  gap: 10px;
+  /* may be faulty */
+  /* height: 80vh; */
 }
 
-.form-wrapper .logo{
-    /* color: #76a346; */
-    color: #5d5b8d;
-    font-weight: bold;
-    font-size: 24px;
-    /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
+.form-wrapper .logo {
+  /* color: #76a346; */
+  color: #5d5b8d;
+  font-weight: bold;
+  font-size: 24px;
+  /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
 }
 
-.title{
-    font-size: 12px;
-    color: #5d5b8d;
-    /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
-    /* font-weight: 500; */
+.title {
+  font-size: 12px;
+  color: #5d5b8d;
+  /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
+  /* font-weight: 500; */
 }
 
-form{
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    /* align-items: center; */
-}
-form input{
-    padding: 15px;
-    /* border-radius: 5px; */
-    border: none;
-    width: 250px;
-    /* border-bottom: 1px solid #76a346; */
-    border-bottom: 1px solid #a7bcff;
-    &::placeholder{
-        color: #afafaf
-    }
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  /* align-items: center; */
 }
 
-form input.avatar{
-    display: none;
+.form-wrapper input {
+  padding: 15px;
+  /* border-radius: 5px; */
+  border: none;
+  width: 250px;
+  /* border-bottom: 1px solid #76a346; */
+  border-bottom: 1px solid #a7bcff;
+
+  &::placeholder {
+    color: #afafaf;
+  }
 }
 
-label.avatar{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    color: #8da4f1;
-    cursor:pointer;
+.form-wrapper input.avatar {
+  display: none;
 }
 
-label img{
-    width: 32px;
+label.avatar {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: #8da4f1;
+  cursor: pointer;
 }
 
-form button{
-    padding: 10px;
-    border: none;
-    /* border-radius: 10px; */
-    /* background-color: #98d05c; */
-    background-color: #7b96ec;
-    color: white;
-    /* margin-top: 20px; */
-    font-size: large;
-    font-weight: bold;
-    cursor: pointer;
+label img {
+  width: 32px;
 }
 
-form+p{
-    margin-top: 10px;
-    margin-bottom: auto;
-    font-size: 12px;
+.form-wrapper button {
+  padding: 10px;
+  border: none;
+  /* border-radius: 10px; */
+  /* background-color: #98d05c; */
+  background-color: #7b96ec;
+  color: white;
+  /* margin-top: 20px; */
+  font-size: large;
+  font-weight: bold;
+  cursor: pointer;
 }
 
-.home{
-    height: 100vh;
-    background-color: #a7bcff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.form-wrapper form+p {
+  margin-top: 10px;
+  margin-bottom: auto;
+  font-size: 12px;
 }
 
-.container{
-    border: 1px white solid;
-    border-radius: 10px;
-    width: 65%;
-    height: 80%;
-    display: flex;
-    overflow: hidden;
+.home {
+  height: 100vh;
+  background-color: #a7bcff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.sidebar{
-    flex: 1;
-    background-color: #3e3c61;
-    border-right: none;
+.container {
+  border: 1px white solid;
+  border-radius: 10px;
+  width: 65%;
+  height: 80%;
+  display: flex;
+  overflow: hidden;
 }
 
-.navbar{
-    height: 65px;
-    background-color: #2f2d52;
-    color: #ddddf7;
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.sidebar {
+  flex: 1;
+  background-color: #3e3c61;
+  border-right: none;
 }
 
-.navbar .logo{
-    font-weight: bold;
-    font-size: large;
+.navbar {
+  height: 50px;
+  background-color: #2f2d52;
+  color: #ddddf7;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.profile{
-    display: flex;
-    gap: 10px;
+.navbar .logo {
+  font-weight: bold;
+  font-size: large;
 }
 
-.profile span{
-    align-self: center;
+.profile {
+  display: flex;
+  gap: 10px;
 }
 
-.profile img{
-    background-color: #ddddf7;
-    height: 28px;
-    width: 28px;
-    border-radius: 50%;;
-    object-fit: cover;
+.profile span {
+  align-self: center;
 }
 
-.profile button{
-    background-color: #5d5b8d;
-    border: none;
-    color: #ddddf7;
-    font-size: 10px;
-    /* border-radius: 10px; */
-    cursor: pointer;
+.profile img {
+  background-color: #ddddf7;
+  height: 28px;
+  width: 28px;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
-.search{
-    border-bottom: 1px gray solid;
-}
-.searchForm{
-    padding: 10px;
-}
-.search input{
-    /* width: 100%; */
-    background-color: transparent;
-    outline: none;
-    border: none;
-    /* padding: 10px; */
-    color: white;
-    &::placeholder{
-        color: lightgray;
-    }
+.profile button {
+  background-color: #5d5b8d;
+  border: none;
+  color: #ddddf7;
+  font-size: 10px;
+  /* border-radius: 10px; */
+  cursor: pointer;
 }
 
-.userchat{
-    /* width: 40px; */
-    color:white;
-    /* font-size: 20px; */
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding: 10px;
-    cursor: pointer;
-    &:hover{
-        background-color: #2f2d52;
-    }
+.search {
+  border-bottom: 1px gray solid;
 }
 
-.userchat img{
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    object-fit: cover;
+.searchForm {
+  padding: 10px;
 }
 
-.userChatInfo span{
-    font-size: 18px;
-    font-weight: 500;
-}
+.search input {
+  /* width: 100%; */
+  background-color: transparent;
+  outline: none;
+  border: none;
+  /* padding: 10px; */
+  color: white;
 
-.userChatInfo div{
-    font-size: 14px;
+  &::placeholder {
     color: lightgray;
+  }
 }
 
-.chat{
-    flex:2
+.userchat {
+  /* width: 40px; */
+  color: white;
+  /* font-size: 20px; */
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 10px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #2f2d52;
+  }
 }
 
-.chatNavbar{
-    background-color: #5d5b8d;
-    height: 65px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
+.userchat img {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
-.chatNavbar span{
-    color:lightgray;
-    font-size: 20px;
+.userChatInfo span {
+  font-size: 18px;
+  font-weight: 500;
 }
 
-.chatIcons{
-    display: flex;
-    gap: 10px;
-}
-.chatIcons img{
+.userChatInfo div {
+  font-size: 14px;
+  color: lightgray;
 
-    height: 28px;
+}
+
+.chat {
+  flex: 2;
+}
+
+.chatNavbar {
+  background-color: #5d5b8d;
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+.chatNavbar span {
+  color: lightgray;
+  font-size: 20px;
+}
+
+.chatIcons {
+  display: flex;
+  gap: 10px;
+}
+
+.chatIcons img {
+  cursor: pointer;
+  height: 28px;
+}
+
+.messages {
+  background-color: #ddddf7;
+  padding: 10px;
+  height: calc(100% - 160px);
+  overflow: auto;
+  overflow-x: hidden;
+}
+
+.message {
+  margin-bottom: 10px;
+  display: flex;
+  gap: 20px;
+}
+
+.message.owner {
+  flex-direction: row-reverse;
+}
+
+.messageInfo {
+  display: flex;
+  flex-direction: column;
+  color: gray;
+  font-weight: 300;
+}
+
+.delTime {
+  white-space: nowrap;
+  font-size: 11px;
+  display: inline;
+}
+
+.messageInfo img {
+  height: 40px;
+  width: 40px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.messageContent {
+  max-width: 80%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.message.owner .messageContent {
+  align-items: flex-end;
+}
+
+.messageContent div {
+  background-color: white;
+  padding: 10px 20px;
+  border-radius: 0px 10px 10px 10px;
+  max-width: 80%;
+  margin: 0 auto;
+}
+
+.message.owner .messageContent div {
+  background: #8da4f1;
+  color: white;
+  border-radius: 10px 0px 10px 10px;
+  max-width: 80%;
+}
+
+.messageContent img {
+  /* width: 50%; */
+  max-width: 50%;
+}
+
+.message.owner .messageContent img {
+  width: 50%;
+}
+
+.input {
+  background-color: white;
+  padding: 10px;
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.textMsg {
+  border: none;
+  outline: none;
+  padding: 10px;
+  width: 100%;
+
+  &::placeholder {
+    color: lightgray;
+  }
+}
+
+.inputButtons {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.inputButtons input {
+  display: none;
+}
+
+.inputButtons img {
+  height: 24px;
+  width: 24px;
+  object-fit: cover;
+  cursor: pointer;
+}
+
+.inputButtons button {
+  background-color: #8da4f1;
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  cursor: pointer;
 }
