--- a/src/style.css
+++ b/src/style.css
@@ -52,7 +52,7 @@ body {
   color: #5d5b8d;
   font-weight: bold;
   font-size: 24px;
-  /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .title {
@@ -265,7 +265,6 @@ label img {
   height: 40px;
   width: 40px;
   border-radius: 50%;
-
   object-fit: cover;
 }
 
@@ -291,6 +290,18 @@ label img {
   margin-bottom: 10px;
   display: flex;
   gap: 20px;
+}
+
+.noUserSelected {
+  width: 100%;
+  height: calc(100% - 70px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  background-color: lightgray;
+  color: grey;
+
 }
 
 .message.owner {
