--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,14 @@
-/* * {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-} */
+}
 
 html,
 body {
-  /* background-color: #76a346; */
   margin: 0px;
   padding: 0px;
   overflow: hidden;
-  /* background-color: #a7bcff; */
-  /* box-sizing: content-box; */
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
@@ -43,12 +40,9 @@ body {
   border-radius: 10px;
   padding: 20px 60px;
   gap: 10px;
-  /* may be faulty */
-  /* height: 80vh; */
 }
 
 .form-wrapper .logo {
-  /* color: #76a346; */
   color: #5d5b8d;
   font-weight: bold;
   font-size: 24px;
@@ -58,23 +52,18 @@ body {
 .title {
   font-size: 12px;
   color: #5d5b8d;
-  /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
-  /* font-weight: 500; */
 }
 
 form {
   display: flex;
   flex-direction: column;
   gap: 15px;
-  /* align-items: center; */
 }
 
 .form-wrapper input {
   padding: 15px;
-  /* border-radius: 5px; */
   border: none;
   width: 250px;
-  /* border-bottom: 1px solid #76a346; */
   border-bottom: 1px solid #a7bcff;
 
   &::placeholder {
@@ -103,10 +92,8 @@ label img {
   border: none;
   height: 45px;
   border-radius: 4px;
-  /* background-color: #98d05c; */
   background-color: #7b96ec;
   color: white;
-  /* margin-top: 20px; */
   font-size: 20px;
   font-weight: bold;
   cursor: pointer;
@@ -180,7 +167,6 @@ label img {
   font-size: 10px;
   height: 28px;
   align-self: center;
-  /* border-radius: 10px; */
   cursor: pointer;
 }
 
@@ -193,11 +179,9 @@ label img {
 }
 
 .search input {
-  /* width: 100%; */
   background-color: transparent;
   outline: none;
   border: none;
-  /* padding: 10px; */
   color: white;
 
   &::placeholder {
@@ -206,9 +190,7 @@ label img {
 }
 
 .userchat {
-  /* width: 40px; */
   color: white;
-  /* font-size: 20px; */
   display: flex;
   align-items: center;
   gap: 10px;
@@ -240,6 +222,9 @@ label img {
 
 .chat {
   flex: 2;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .chatNavbar {
@@ -261,7 +246,6 @@ label img {
 
 
 .recepientProfilePic {
-  /* background-color: #ddddf7; */
   height: 40px;
   width: 40px;
   border-radius: 50%;
@@ -279,6 +263,7 @@ label img {
 }
 
 .messages {
+  flex: 1;
   background-color: #ddddf7;
   padding: 10px;
   height: calc(100% - 160px);
@@ -287,14 +272,17 @@ label img {
 }
 
 .message {
+  width: 100%;
   margin-bottom: 10px;
   display: flex;
+  justify-content: flex-start;
   gap: 20px;
 }
 
 .noUserSelected {
   width: 100%;
   height: calc(100% - 70px);
+  flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -329,22 +317,22 @@ label img {
 }
 
 .messageContent {
-  max-width: 80%;
+  width: 80%;
   display: flex;
-  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   gap: 10px;
 }
 
 .message.owner .messageContent {
-  align-items: flex-end;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 .messageContent div {
   background-color: white;
   padding: 10px 20px;
   border-radius: 0px 10px 10px 10px;
-  max-width: 80%;
-  margin: 0 auto;
 }
 
 .message.owner .messageContent div {
@@ -355,7 +343,6 @@ label img {
 }
 
 .messageContent img {
-  /* width: 50%; */
   max-width: 50%;
 }
 
